data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1723.wast
;; 4. **Empty Control Stack**:    - **Description**: Place `br_if` immediately after the function entry point, before any structured control instructions are defined, causing an invalid empty control stack reference.    - **Constraint**: Insufficient control stack setup.    - **CFG Impact**: Branching to non-existent control block disrupts the CFG structure.

(assert_invalid
  (module
    (func $empty-control-stack
      (br_if 0 (i32.const 1))
    )
  )
  "unknown label"
)